src/libui/libui.cr


    fun new_underline_color_attribute = uiNewUnderlineColorAttribute(u : UnderlineColor, r : LibC::Double, g : LibC::Double, b : LibC::Double, a : LibC::Double) : Pointer(Void)
    fun attribute_underline_color = uiAttributeUnderlineColor(a : Pointer(Void), u : Pointer(Void), r : Pointer(LibC::Double), g : Pointer(LibC::Double), b : Pointer(LibC::Double), alpha : Pointer(LibC::Double))
    alias OpenTypeFeatures = Void
    fun new_open_type_features = uiNewOpenTypeFeatures : Pointer(Void)
    fun free_open_type_features = uiFreeOpenTypeFeatures(otf : Pointer(Void))
    fun open_type_features_clone = uiOpenTypeFeaturesClone(otf : Pointer(Void)) : Pointer(Void)
    fun open_type_features_add = uiOpenTypeFeaturesAdd(otf : Pointer(Void), a : LibC::Char, b : LibC::Char, c : LibC::Char, d : LibC::Char, value : UInt32)
    fun open_type_features_remove = uiOpenTypeFeaturesRemove(otf : Pointer(Void), a : LibC::Char, b : LibC::Char, c : LibC::Char, d : LibC::Char)
    fun open_type_features_get = uiOpenTypeFeaturesGet(otf : Pointer(Void), a : LibC::Char, b : LibC::Char, c : LibC::Char, d : LibC::Char, value : Pointer(Void)) : LibC::Int
    fun open_type_features_for_each = uiOpenTypeFeaturesForEach(otf : Pointer(Void), f : Pointer(Void), data : Pointer(Void))
    fun new_features_attribute = uiNewFeaturesAttribute(otf : Pointer(Void)) : Pointer(Void)
    fun attribute_features = uiAttributeFeatures(a : Pointer(Void)) : Pointer(Void)
    alias AttributedString = Void
    fun new_attributed_string = uiNewAttributedString(initial_string : Pointer(LibC::Char)) : Pointer(Void)
    fun free_attributed_string = uiFreeAttributedString(s : Pointer(Void))
    fun attributed_string_string = uiAttributedStringString(s : Pointer(Void)) : Pointer(LibC::Char)
    fun attributed_string_len = uiAttributedStringLen(s : Pointer(Void))
    fun attributed_string_append_unattributed = uiAttributedStringAppendUnattributed(s : Pointer(Void), str : Pointer(LibC::Char))
    fun attributed_string_insert_at_unattributed = uiAttributedStringInsertAtUnattributed(s : Pointer(Void), str : Pointer(LibC::Char), at : LibC::SizeT)
    fun attributed_string_delete = uiAttributedStringDelete(s : Pointer(Void), start : LibC::SizeT, _end : LibC::SizeT)
    fun attributed_string_set_attribute = uiAttributedStringSetAttribute(s : Pointer(Void), a : Pointer(Void), start : LibC::SizeT, _end : LibC::SizeT)
    fun attributed_string_for_each_attribute = uiAttributedStringForEachAttribute(s : Pointer(Void), f : Pointer(Void), data : Pointer(Void))
    fun attributed_string_num_graphemes = uiAttributedStringNumGraphemes(s : Pointer(Void))
    fun attributed_string_byte_index_to_grapheme = uiAttributedStringByteIndexToGrapheme(s : Pointer(Void), pos : LibC::SizeT)
    fun attributed_string_grapheme_to_byte_index = uiAttributedStringGraphemeToByteIndex(s : Pointer(Void), pos : LibC::SizeT)

    struct FontDescriptor
      family : Pointer(LibC::Char)
      size : LibC::Double
      weight : TextWeight
      italic : TextItalic
      stretch : TextStretch
    end

    fun load_control_font = uiLoadControlFont(f : Pointer(Void))
    fun free_font_descriptor = uiFreeFontDescriptor(desc : Pointer(Void))
    alias DrawTextLayout = Void

    enum DrawTextAlign
      Left
      Center
      Right
    end

    struct DrawTextLayoutParams
      string : Pointer(Void)
      default_font : Pointer(Void)
      width : LibC::Double
      align : DrawTextAlign
    end

    fun draw_new_text_layout = uiDrawNewTextLayout(params : Pointer(Void)) : Pointer(Void)
    fun draw_free_text_layout = uiDrawFreeTextLayout(tl : Pointer(Void))
    fun draw_text = uiDrawText(c : Pointer(Void), tl : Pointer(Void), x : LibC::Double, y : LibC::Double)
    fun draw_text_layout_extents = uiDrawTextLayoutExtents(tl : Pointer(Void), width : Pointer(LibC::Double), height : Pointer(LibC::Double))
    alias FontButton = Void
    fun font_button_font = uiFontButtonFont(b : Pointer(Void), desc : Pointer(Void))
    fun font_button_on_changed = uiFontButtonOnChanged(b : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_font_button = uiNewFontButton : Pointer(Void)
    fun free_font_button_font = uiFreeFontButtonFont(desc : Pointer(Void))
    alias ColorButton = Void
    fun color_button_color = uiColorButtonColor(b : Pointer(Void), r : Pointer(LibC::Double), g : Pointer(LibC::Double), bl : Pointer(LibC::Double), a : Pointer(LibC::Double))
    fun color_button_set_color = uiColorButtonSetColor(b : Pointer(Void), r : LibC::Double, g : LibC::Double, bl : LibC::Double, a : LibC::Double)
    fun color_button_on_changed = uiColorButtonOnChanged(b : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))
    fun new_color_button = uiNewColorButton : Pointer(Void)
    alias Form = Void
    fun form_append = uiFormAppend(f : Pointer(Void), label : Pointer(LibC::Char), c : Pointer(Void), stretchy : LibC::Int)
    fun form_num_children = uiFormNumChildren(f : Pointer(Void)) : LibC::Int
    fun form_delete = uiFormDelete(f : Pointer(Void), index : LibC::Int)
    fun form_padded = uiFormPadded(f : Pointer(Void)) : LibC::Int
    fun form_set_padded = uiFormSetPadded(f : Pointer(Void), padded : LibC::Int)
    fun new_form = uiNewForm : Pointer(Void)

    enum Align
      Fill
      Start
      Center
      End
    end

    enum At
      Leading
      Top
      Trailing
      Bottom
    end

    alias Grid = Void
    fun grid_append = uiGridAppend(g : Pointer(Void), c : Pointer(Void), left : LibC::Int, top : LibC::Int, xspan : LibC::Int, yspan : LibC::Int, hexpand : LibC::Int, halign : Align, vexpand : LibC::Int, valign : Align)
    fun grid_insert_at = uiGridInsertAt(g : Pointer(Void), c : Pointer(Void), existing : Pointer(Void), at : At, xspan : LibC::Int, yspan : LibC::Int, hexpand : LibC::Int, halign : Align, vexpand : LibC::Int, valign : Align)
    fun grid_padded = uiGridPadded(g : Pointer(Void)) : LibC::Int
    fun grid_set_padded = uiGridSetPadded(g : Pointer(Void), padded : LibC::Int)
    fun new_grid = uiNewGrid : Pointer(Void)
    alias Image = Void
    fun new_image = uiNewImage(width : LibC::Double, height : LibC::Double) : Pointer(Void)
    fun free_image = uiFreeImage(i : Pointer(Void))
    fun image_append = uiImageAppend(i : Pointer(Void), pixels : Pointer(Void), pixel_width : LibC::Int, pixel_height : LibC::Int, byte_stride : LibC::Int)
    alias TableValue = Void
    fun free_table_value = uiFreeTableValue(v : Pointer(Void))
    fun table_value_get_type = uiTableValueGetType(v : Pointer(Void))
    fun new_table_value_string = uiNewTableValueString(str : Pointer(LibC::Char)) : Pointer(Void)
    fun table_value_string = uiTableValueString(v : Pointer(Void)) : Pointer(LibC::Char)
    fun new_table_value_image = uiNewTableValueImage(img : Pointer(Void)) : Pointer(Void)
    fun table_value_image = uiTableValueImage(v : Pointer(Void)) : Pointer(Void)
    fun new_table_value_int = uiNewTableValueInt(i : LibC::Int) : Pointer(Void)
    fun table_value_int = uiTableValueInt(v : Pointer(Void)) : LibC::Int
    fun new_table_value_color = uiNewTableValueColor(r : LibC::Double, g : LibC::Double, b : LibC::Double, a : LibC::Double) : Pointer(Void)
    fun table_value_color = uiTableValueColor(v : Pointer(Void), r : Pointer(LibC::Double), g : Pointer(LibC::Double), b : Pointer(LibC::Double), a : Pointer(LibC::Double))
    alias TableModel = Void

    enum SortIndicator
      None
      Ascending
      Descending
    end

    struct TableModelHandler
      num_columns : (Pointer(Void), Pointer(Void) -> LibC::Int)
      column_type : (Pointer(Void), Pointer(Void), LibC::Int -> Void)
      num_rows : (Pointer(Void), Pointer(Void) -> LibC::Int)
      cell_value : (Pointer(Void), Pointer(Void), LibC::Int, LibC::Int -> Pointer(Void))
      set_cell_value : (Pointer(Void), Pointer(Void), LibC::Int, LibC::Int, Pointer(Void) -> Void)
    end

    fun new_table_model = uiNewTableModel(mh : Pointer(Void)) : Pointer(Void)
    fun free_table_model = uiFreeTableModel(m : Pointer(Void))
    fun table_model_row_inserted = uiTableModelRowInserted(m : Pointer(Void), new_index : LibC::Int)
    fun table_model_row_changed = uiTableModelRowChanged(m : Pointer(Void), index : LibC::Int)
    fun table_model_row_deleted = uiTableModelRowDeleted(m : Pointer(Void), old_index : LibC::Int)

    struct TableTextColumnOptionalParams
      color_model_column : LibC::Int
    end

    struct TableParams
      model : Pointer(Void)
      row_background_color_model_column : LibC::Int
    end

    alias Table = Void
    fun table_append_text_column = uiTableAppendTextColumn(t : Pointer(Void), name : Pointer(LibC::Char), text_model_column : LibC::Int, text_editable_model_column : LibC::Int, text_params : Pointer(Void))
    fun table_append_image_column = uiTableAppendImageColumn(t : Pointer(Void), name : Pointer(LibC::Char), image_model_column : LibC::Int)
    fun table_append_image_text_column = uiTableAppendImageTextColumn(t : Pointer(Void), name : Pointer(LibC::Char), image_model_column : LibC::Int, text_model_column : LibC::Int, text_editable_model_column : LibC::Int, text_params : Pointer(Void))
    fun table_append_checkbox_column = uiTableAppendCheckboxColumn(t : Pointer(Void), name : Pointer(LibC::Char), checkbox_model_column : LibC::Int, checkbox_editable_model_column : LibC::Int)
    fun table_append_checkbox_text_column = uiTableAppendCheckboxTextColumn(t : Pointer(Void), name : Pointer(LibC::Char), checkbox_model_column : LibC::Int, checkbox_editable_model_column : LibC::Int, text_model_column : LibC::Int, text_editable_model_column : LibC::Int, text_params : Pointer(Void))
    fun table_append_progress_bar_column = uiTableAppendProgressBarColumn(t : Pointer(Void), name : Pointer(LibC::Char), progress_model_column : LibC::Int)
    fun table_append_button_column = uiTableAppendButtonColumn(t : Pointer(Void), name : Pointer(LibC::Char), button_model_column : LibC::Int, button_clickable_model_column : LibC::Int)
    fun table_header_visible = uiTableHeaderVisible(t : Pointer(Void)) : LibC::Int
    fun table_header_set_visible = uiTableHeaderSetVisible(t : Pointer(Void), visible : LibC::Int)
    fun new_table = uiNewTable(params : Pointer(Void)) : Pointer(Void)
    fun table_on_row_clicked = uiTableOnRowClicked(t : Pointer(Void), f : (Pointer(Void), LibC::Int, Pointer(Void) -> Void), data : Pointer(Void))
    fun table_on_row_double_clicked = uiTableOnRowDoubleClicked(t : Pointer(Void), f : (Pointer(Void), LibC::Int, Pointer(Void) -> Void), data : Pointer(Void))
    fun table_header_set_sort_indicator = uiTableHeaderSetSortIndicator(t : Pointer(Void), column : LibC::Int, indicator : SortIndicator)
    fun table_header_sort_indicator = uiTableHeaderSortIndicator(t : Pointer(Void), column : LibC::Int)
    fun table_header_on_clicked = uiTableHeaderOnClicked(t : Pointer(Void), f : (Pointer(Void), LibC::Int, Pointer(Void) -> Void), data : Pointer(Void))
    fun table_column_width = uiTableColumnWidth(t : Pointer(Void), column : LibC::Int) : LibC::Int
    fun table_column_set_width = uiTableColumnSetWidth(t : Pointer(Void), column : LibC::Int, width : LibC::Int)

    enum TableSelectionMode
      None
      ZeroOrOne
      One
      ZeroOrMany
    end

    fun table_get_selection_mode = uiTableGetSelectionMode(t : Pointer(Void))
    fun table_set_selection_mode = uiTableSetSelectionMode(t : Pointer(Void), mode : TableSelectionMode)
    fun table_on_selection_changed = uiTableOnSelectionChanged(t : Pointer(Void), f : (Pointer(Void), Pointer(Void) -> Void), data : Pointer(Void))

    struct TableSelection
      num_rows : LibC::Int
      rows : Pointer(LibC::Int)
    end

    fun table_get_selection = uiTableGetSelection(t : Pointer(Void)) : Pointer(Void)
    fun table_set_selection = uiTableSetSelection(t : Pointer(Void), sel : Pointer(Void))
    fun free_table_selection = uiFreeTableSelection(s : Pointer(Void))
  end
end
